tests/baselines/reference/inexistentPropertyInsideToStringType.errors.txt
tests/cases/compiler/index.js(5,10): error TS2339: Property 'yadda' does not exist on type 'toString'.


==== tests/cases/compiler/index.js (1 errors) ====
    function SomeClass() {
    }
    var _proto = SomeClass.prototype;
    _proto.toString = function toString() {
        this.yadda
             ~~~~~
!!! error TS2339: Property 'yadda' does not exist on type 'toString'.
        let someValue = "";
        this.toString = () => someValue;
        return someValue;
    }